12-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:

  tls:
    - hosts:
        - bt-rcpg-seongha.com
        - api.bt-rcpg-seongha.com
        - explorer.bt-rcpg-seongha.com
      secretName: tls-cert
  rules:
    - host: bt-rcpg-seongha.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: api.bt-rcpg-seongha.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 4000
    - host: explorer.bt-rcpg-seongha.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: explorer
                port:
                  number: 8080
